# Rune

./: .dockerignore  .gitignore  Dockerfile.backend  Dockerfile.dashboard  README.md  docker-compose.yml  install.sh
.github/workflows/: ci.yml
backend/: .env.example  Cargo.toml  config.example.toml
backend/migrations/: 001_init.sql  002_tasks.sql  003_memory.sql  004_sessions.sql
backend/prompts/: system.md
backend/src/: config.rs  error.rs  lib.rs  main.rs  state.rs
backend/src/agent/: context.rs  loop_.rs  mod.rs  planner.rs  reflector.rs
backend/src/agent/memory/: embedder.rs  episodic.rs  mod.rs  semantic.rs
backend/src/core/: db.rs  mod.rs
backend/src/core/llm/: metrics.rs  mod.rs  router.rs  types.rs
backend/src/core/llm/providers/: anthropic.rs  fireworks.rs  gemini.rs  groq.rs  mod.rs  ollama.rs  openai.rs  openai_compatible.rs  openrouter.rs
backend/src/interfaces/: mod.rs
backend/src/interfaces/api/: auth.rs  config.rs  memory.rs  mod.rs  model.rs  status.rs  tasks.rs  tools.rs  ws.rs
backend/src/interfaces/telegram/: auth.rs  commands.rs  mod.rs  progress.rs
backend/src/tools/: file.rs  http_fetch.rs  mod.rs  terminal.rs  types.rs  web_search.rs
backend/src/utils/: mod.rs  sanitize.rs  truncate.rs
dashboard/: .env.local.example  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
dashboard/src/: middleware.ts
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/app/dashboard/: layout.tsx  page.tsx
dashboard/src/app/login/: page.tsx
dashboard/src/components/layout/: Sidebar.tsx  StatusBar.tsx  Topbar.tsx
dashboard/src/components/memory/: MemoryCard.tsx  (+1 more)
dashboard/src/hooks/: useAgent.ts  useConfig.ts  useMemory.ts  useTasks.ts  useWebSocket.ts
dashboard/src/lib/: api.ts  auth.ts  ws.ts
dashboard/src/store/: agentStore.ts  configStore.ts
dashboard/src/types/: api.ts  ws.ts
(+14 files in other folders)
