[package]
name = "rune"
version = "1.0.0"
edition = "2021"
description = "Rune — Rust autonomous AI agent framework"
license = "MIT"

[[bin]]
name = "rune"
path = "src/main.rs"

[lib]
name = "rune"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-stream = "0.1"
tokio-tungstenite = "0.23"
futures = "0.3"
futures-util = "0.3"
async-trait = "0.1"
pin-project-lite = "0.2"
async-stream = "0.3"

# HTTP server
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = "1"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
eventsource-stream = "0.2"

# Telegram bot
teloxide = { version = "0.12", default-features = false, features = ["macros", "ctrlc_handler", "rustls"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "macros", "chrono", "uuid", "migrate"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Auth
jsonwebtoken = "9"

# Crypto
sha2 = "0.10"
hex = "0.4"

# Rate limiting
governor = "0.6"

# Concurrent map
dashmap = "6"

# IDs / time
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Config
dotenvy = "0.15"

# Misc
once_cell = "1"
url = "2"
percent-encoding = "2"
bytes = "1"

[dev-dependencies]
wiremock = "0.6"
tempfile = "3"
tokio-test = "0.4"
http-body-util = "0.1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
